Pending changes exported from your codespace

--- a/example.tex
+++ b/example.tex
@@ -59,6 +59,7 @@
 % \date{}
 \title{ मराठी आरती संग्रह } \author{ शौनक नाशिककर } \date{\today}
 
+\raggedbottom
 \begin{document}
 
 \frontmatter
@@ -71,348 +72,468 @@
 
 \part{आरती}
 
-\chapter{सुखकर्ता दुःखहर्ता}
-
-% \begin{verbatim}
-% \paragraph*{start}
-सुखकर्ता दुखहर्ता, वार्ता विघ्नांची। \\
-नुरवी; पुरवी प्रेम, कृपा जयाची।\\
-सर्वांगी सुंदर, उटी शेंदुराची। \\
-कंठी झळके माळ, मुक्ताफळांची. ॥१॥ \\
+% \chapter{आरती}
+\chapter{गणपतीची आरती(Ganpati Aarti)}
+% \begin{multicols}{2}
+\subsection*{marathi}
+\begin{flushleft}
+  % \rule{\linewidth}{1pt} \\
+  सुखकर्ता दुखहर्ता, वार्ता विघ्नांची । \\
+  नुरवी; पुरवी प्रेम, कृपा जयाची ।\\
+  सर्वांगी सुंदर, उटी शेंदुराची । \\
+  कंठी झळके माळ, मुक्ताफळांची ॥ १ ॥ \\
+  % -------------------------------------- \\
+  \rule{\linewidth}{1pt} \\
+  जय देव, जय देव जय मंगलमूर्ती, हो श्री मंगलमूर्ती । \\
+  दर्शनमात्रे मनकामना पुरती ॥धृ॥ \\
+  \rule{\linewidth}{1pt} \\
+  % -------------------------------------- \\
+  रत्नखचित फरा तूज गौरीकुमरा । \\
+  चंदनाची उटी कुंकुमकेशरा । \\
+  हिरे जडित मुकुट शोभतो बरा । \\
+  रुणझुणती नुपुरे चरणी घागरिया । \\
+  चरणीच्या घागरिया रुणझुण वाजती । \\
+  तेथे नांदे देवा अंबर गर्जती । \\
+  ताता ठुमकत ठुमकत नाचे गणपती । \\
+  तव शंकर पार्वती कौतुक पाहाती ॥ २ ॥ \\
+  \rule{\linewidth}{1pt} \\
+  लंबोदर पीतांबर, फणिवरबंधना । \\
+  सरळ सोंड, वक्रतुंड त्रिनयना । \\
+  दास रामाचा, वाट पाहे सदना । \\
+  संकटी पावावे, निर्वाणी रक्षावे, सुरवरवंदना । \\
+  जय देव जय देव, जय मंगलमूर्ती । \\
+  दर्शनमात्रे मनकामना पुरती ॥ ३ ॥
+  \pagebreak
+  \subsection*{english}
+  sukhakarta dukhaharta, varta vighnanchi । \\
+  nurvi; purvi prem, kripa jayachi ।।\\
+  sarvangi sundar, uti shendurachi ।\\
+  kanthi zalke mal, muktaphalanchi ।। 1 ।। \\
+  \rule{\linewidth}{1pt} \\
+  jai dev, jay dev jay mangalamoorthy, ho shri mangalmurti . \\ darshanamatre man kamna purati
+  \rule{\linewidth}{1pt} \\
+  ratnakhachit fara tuj gaureekumara । \\
+  chandanachi uti kunkumakeshara ।। \\
+  hire jadit mukut shobhato baraa । \\
+  runajhunati nupure charani ghagariya । \\
+  charanichya ghagariya runajhun vajtie ।। \\
+  tethe nande deva amber garjati । \\
+  tata thumakat thumakat nache ganpati ।। \\
+  tav shankar parvati kautuk pahatis ।। 2 ।।\\
+  \rule{\linewidth}{1pt} \\
+  ambodar pitambar, phanivarabandhana । \\
+  saral sond, vakratund trinyanaa ।। \\
+  das ramacha, vat pahe sadanaa । \\
+  sankati pavave, nirvani rakshave, suravaravandana ।। \\
+  jai dev jai dev, jay mangalamoorthy । \\
+  darshanamatre manakamana purti ।। 2 ।। \\
+\end{flushleft}
+% \end{multicols}
 % -------------------------------------- \\
-\rule{\linewidth}{1pt} \\
-जय देव, जय देव जय मंगलमूर्ती। \\
-दर्शनमात्रे मन कामना पुरती ॥धृ॥ \\
-\rule{\linewidth}{1pt} \\
-% -------------------------------------- \\
-रत्नखचित फरा तूज गौरीकुमरा । \\
-चंदनाची उटी कुंकुमकेशरा । \\
-हिरे जडित मुकुट शोभतो बरा । \\
-रुणझुणती नुपुरे चरणी घागरिया । \\
-चरणीच्या घागरिया रुणझुण वाजती । \\
-तेथे नांदे देवा अंबर गर्जती । \\
-ताता ठुमकत ठुमकत नाचे गणपती । \\
-तव शंकर पार्वती कौतुक पाहाती ॥२॥ \\
-\rule{\linewidth}{1pt} \\
-लंबोदर पीतांबर, फणिवरबंधना। \\
-सरळ सोंड, वक्रतुंड त्रिनयना। \\
-दास रामाचा, वाट पाहे सदना। \\
-संकटी पावावे, निर्वाणी रक्षावे, सुरवरवंदना। \\
-जय देव जय देव, जय मंगलमूर्ती। \\
-दर्शनमात्रे मनकामना पुरती ॥३॥ \\
-\rule{\linewidth}{1pt}
-% -------------------------------------- \\
-% \end{start}
+\pagebreak
+\chapter{दुर्गा देवीची आरती(Durga Devi Aarti)}
+\begin{flushleft}
+  \subsection*{marathi}
+  % \rule{\linewidth}{1pt} \\
+  % \chapter{दुर्गा देवीची आरती
+  दुर्गे दुर्घट भारी तुजविण संसारी । \\
+  अनाथनाथे अंबे करुणा विस्तारी ॥\\
+  वारी वारीं जन्ममरणाते वारी । \\
+  हारी पडलो आता संकट नीवारी ॥ १ ॥ \\
+  \rule{\linewidth}{1pt} \\
+  जय देवी जय देवी जय महिषासुरमथनी, \\ ओ दैत्यासुरमथनी । \\
+  सुरवरईश्वरवरदे तारक संजीवनी ॥धृ॥ \\
+  \rule{\linewidth}{1pt} \\
+  त्रिभुवनी भुवनी पाहतां तुज ऎसे नाही । \\
+  चारी श्रमले परंतु न बोलावे काहीं ॥ \\
+  साही विवाद करितां पडिले प्रवाही । \\
+  ते तूं भक्तालागी, ते तूं दासालागी, पावसि लवलाही ॥२॥ \\
+  \rule{\linewidth}{1pt} \\
+  प्रसन्न वदने प्रसन्न होसी निजदासां । \\
+  क्लेशापासूनि सोडी, दुःखांपासुन सोडवी, तोडी भवपाशा ॥ \\
+  अंवे तुजवांचून कोण पुरविल आशा । \\
+  नरहरि तल्लिन झाला पदपंकजलेशा ॥३॥ \\
+  \pagebreak
+  \subsection*{english}
+  durge durghat bhari tujavin sansari \\ anathanathe ambe karuna vistaris\\ vari varin janmamaranate varie \\ hari padalo ata sankat nivari \\
+  \rule{\linewidth}{1pt} \\
+  jay devi jay devi jay mahishasuramathani, \\ o daityasuramathani \\ suravaraishvaravarade tarak sanjivani \\
+  \rule{\linewidth}{1pt} \\
+  tribhuvani bhuvani pahatan tuj se nahi \\ chari shramale parantu n bolave kahin \\ sahi vivad karitan padile pravahi \\ te toon bhaktalagi, te toon dasalagi, pavasi lavalahi \\
+  \rule{\linewidth}{1pt} \\
+  prasann vadane prasann hosie nijadasan \\ kleshapasuni sodi, duhkhaanpaasun sodavi, todi bhavpasha \\ anve tujavanchun kon purvil ashaa \\ narhari tallin jhala padapankajaleshaan \\
 
+\end{flushleft}
+\pagebreak
+\chapter{शंकराची आरती(Shankar Aarti)}
+\begin{flushleft}
+  \subsection*{marathi}
+  लवथवती विक्राळा ब्रह्मांडी माळा। \\
+  वीषें कंठी काळा त्रिनेत्रीं ज्वाळां॥ \\
+  लावण्यसुंदर मस्तकीं बाळा। \\
+  तेथुनियां जळ निर्मळ वाहे झुळझुळां॥१॥ \\
+  \rule{\linewidth}{1pt} \\
+  जय देव जय देव जय श्रीशंकरा, ओ स्वामी शंकरा।। \\
+  आरती ओवाळूं तुज कर्पुगौरा ।।ध्रु.।। \\
+  \rule{\linewidth}{1pt} \\
+  कर्पुगौरा भोळा नयनीं विशाळा। \\
+  आर्धांगीं पार्वती सुमनांच्या माळा। \\
+  विभुतीचें उधळण शितिकंठ नीळा। \\
+  ऐसा शंकर शोभे उमावेल्हाळा॥ जय.॥२॥ \\
+  \rule{\linewidth}{1pt} \\
+  देवी दैत्यीं सागरमंथन पैं केलें। \\
+  त्यामाजी जें अवचित हळाहळ उठिलें। \\
+  तें त्वां असुरपषं प्राशन केलें। \\
+  नीळकंठ नाम प्रसिद्ध झालें॥जय.॥३॥ \\
+  \rule{\linewidth}{1pt} \\
+  व्याघ्रांबर फणिवरधर सुंदर मदनारी।\\
+  पंचानन मनमोहन मुनिजनसुखकारी।\\
+  शतकोटीचें बीज वाचे उच्चारी।\\
+  रघुकुलतिलक रामदासा अंतरी॥\\
+  जय देव जय देव जय श्रीशंकरा॥४॥
+  \pagebreak
+  \subsection*{english}
+  lavathavati vikrala brahmandi mala \\ vishen kanthi kala trinetrin jvalan \\ lavanyasundar mastakin bala \\ tethuniyan jal nirmal vahe jhulajhulan \\
+  \rule{\linewidth}{1pt} \\
+  jay dev jay dev jay shreeshankara, o swami shankara \\ aarati ovalu tuj karpugaura iadhru.. \\
+  \rule{\linewidth}{1pt} \\
+  karpugaura bhola nayanin vishala \\ ardhangin parvati sumanaanchya mala \\ vibhutichen udhalan shitikanth nilaa \\ aisa shankar shobhe umavelhala jay \\
+  \rule{\linewidth}{1pt} \\
+  devi daityin sagaramanthan pain kelen \\ tyamaji jen avachit halahal uthilen \\ ten tvan asurapashan prashan kelen \\ nilakanth naam prasiddh jhalenka \\
+  \rule{\linewidth}{1pt} \\
+  vyaghrambar phanivaradhar sundar madanari\\ panchanan manmohan munijansukhkari\\ shatakotichen bij vache uchchari\\ raghukulatilak ramadasa antaree\\ jay dev jay dev jay shreeshankara
 
-% \end{verbatim}
+\end{flushleft}
+\chapter{महालक्ष्मीची आरती (Mahalaxmi Aarti )}
+\begin{flushleft}
+  \subsection*{marathi}
+  जय देवी जय देवी जय महालक्ष्मी \\
+  वससी व्यापकरूपे राहे निश्चलरूपे तू स्थूलसुक्ष्मी. जय. \\
+  \rule{\linewidth}{1pt} \\
+  करवीरपूर वासिनी सुरवर मुनिमाता \\
+  पुरहर वरदायिनी मुरहर प्रियकांता \\
+  कमलाकारे जठरी जन्मविला धाता \\
+  सहस्त्र वदनी भूधर नपुरे गुणगाता.॥1॥ जय. \\
+  \rule{\linewidth}{1pt} \\
+  मातुल्लिंग गदा खेटक रविकिरणी \\
+  झळके हाटकवाटी पीयुष रसपाणि \\
+  माणिक रसना सुरंग वसना मृगनयनी \\
+  शशीकर वदना राजस मदनाची जननी.॥२॥ जय. \\
+  \rule{\linewidth}{1pt} \\
+  तारा शक्ती अगम्या शीवभजका गौरी \\
+  सांख्य म्हणती प्रकृती निर्गुण निर्धारी \\
+  गायत्री नीजबीजा निगमागमसारी \\
+  प्रगटे पद्मावती निजधर्माचारी. जय.॥3॥ \\
+  \rule{\linewidth}{1pt} \\
+  अमृत भरिते सरिते अघदुरिते वारी \\
+  मारी दुर्घट असुरा भवदुस्तर तारी \\
+  वारी माया पटल प्रणमत परिवारी \\
+  हे रूप चिद्रुप दावी निर्धारी. जय.॥4॥ \\
+  \rule{\linewidth}{1pt} \\
+  चतुराननाने कुश्चित कर्मांच्या ओळी \\
+  लिहिल्या असतिल माते माझे निजभाळी \\
+  पुसोनि चरणातळी पदसुमने क्षाळी \\
+  मुक्तेश्वर नागर क्षीरसागर बाळी. जय.॥5॥ \\
+  \pagebreak
+  \subsection*{english}
+  jay devi jay devi jay mahalakshmi \\ vasasi vyapakarupe rahe nishchalarupe tu sthulasukshmi.॥1॥ jay. \\
+  \rule{\linewidth}{1pt} \\
+  karvirpur vasini suravar munimata \\ purhar vardayini murahar priyakanta \\ kamalakare jathari janmavila dhata \\ sahastra vadani bhudhar napure gunagata.॥२॥ jay. \\
+  \rule{\linewidth}{1pt} \\
+  matulling gada khetak ravikirani \\ jhalake hatakavati piyush raspani \\ manik rasna surang vasana mrignayani \\ shasheekar vadana rajas madanaachi janani.॥3॥ jay. \\
+  \rule{\linewidth}{1pt} \\
+  tara shakti agamya shivabhajaka gauri \\ sankhya mhanati prakrti nirgun nirdhari \\ gayatri nijabija nigamagamasari \\ pragate padmavati nijadharmachari.॥4॥ jay. \\
+  \rule{\linewidth}{1pt} \\
+  amrit bharite sarite aghdurite vari \\ mari durghat asura bhavdustar tari \\ vari maya patal pranamat parivari \\ he roop chidrup davi nirdhari.॥5॥ jay. \\
+  \rule{\linewidth}{1pt} \\
+  chaturannane kushchit karmanchya oli \\ lihilya asatil mate majhe nijabhali \\ pusoni charanaatali padsumne ksali \\ mukteshwar nagar kshirsagar bali.॥6॥ jay. \\
+\end{flushleft}
+% \end{start}\
+\pagebreak
+\chapter{श्री गुरुदत्ताची आरती(Shri Gurudattaachi Aarti)}
+\begin{flushleft}
+  \subsection*{marathi}
+  त्रिगुणात्मक त्रैमूर्ती दत्त हा जाणा।  \\
+  त्रिगुणी अवतार त्रेलोक्य राणा।। \\
+  नेती नेती शब्द न ये अनुमाना।  \\
+  सुरवर मुनिजन योगी समाधी न ये ध्याना।।१।। \\
+  \rule{\linewidth}{1pt} \\
+  जय देव जयदेव जय श्री गुरुदत्ता।\\ आरती ओवाळिता हरली भवचिंता। जय देव जय देव।
+  \rule{\linewidth}{1pt} \\
+  सबाह्य अभ्यंतरीं तू एक दत्त।\\ अभाग्यासी कैंची कळेल ही मात।।\\
+  परा ही परतली तेथे कैंचा हा हेत।\\ जन्मरमरण्याचा पुरलासे अंत ।।२।। जय देव जय देव
+  \rule{\linewidth}{1pt} \\
+  दत्त येऊनिया उभा ठाकला।\\ सद्भावे साष्टांग प्रणिपात केला।।\\
+  प्रसन्न होऊनिया आशीर्वाद दिधला।\\ जन्ममरण्याचा फेरा चुकविला।।३।। जय देव जय देव
+  \rule{\linewidth}{1pt} \\
+  दत्त दत्त ऐसे लागले ध्यान।\\ हारपले मन झाले उन्मन।। \\
+  मीतूंपणाची झाली बोळवण।\\ एका जनार्दनीं श्री दत्त ध्यान ।।४।। जय देव जय देव
+  \pagebreak
+  \subsection*{english}
+  trigunatmak traimurti datta ha janaa \\ triguni avatar treloky rana \\ neti neti shabd n ye anumana \\ suravar munijan yogi samadhi n ye dhyana \\
+  \rule{\linewidth}{1pt} \\
+  jai dev jaydev jai shri gurudatta\\ arati ovalita harali bhavachintaa. jai dev jai dev
+  \rule{\linewidth}{1pt} \\
+  sabahy abhyantarin tu ek datta\\ abhagyasi kainchi kalel he mata\\ para he paratali tethe kaincha ha heta\\ janmaramaranyacha purlase ant. jai dev jai dev
+  \rule{\linewidth}{1pt} \\
+  datt yeuniya ubha thakala\\ sadbhave sashtang pranipat kelaa\\ prasann houniya ashirvad didhalaa\\ janmamaranyacha ferra chukvila. jai dev jai dev
+  \rule{\linewidth}{1pt} \\
+  datt datt aise lagale dhyana\\ harpale man jhale unmana \\ mitunpanachi jhali bolavana\\ eka janardanin shri datt dhyan. jai dev jai dev
+\end{flushleft}
+\pagebreak
+\chapter{विठ्ठलाची आरती(Vitthalachi Aarti)}
+\begin{flushleft}
+  \subsection*{marathi}
+  येई हो विठ्ठले माझे माउली ये।।\\
+  निढळावरी कर, ठेवूनि वाट मी पाहे।।\\
+  आलिया गोलिया हाती धाडी निरोप।\\
+  पंढरपुरी आहे, माझा मायबाप।।१।।\\
+  \rule{\linewidth}{1pt} \\
+  पिवळा पितांबर कैसा गगनी झळकला।\\
+  गरुडावरी बैसोनी, माझा कैवारी आला।।२।।\\
+  \rule{\linewidth}{1pt} \\
+  विठोबाचे राज्य आम्हा नित्य दिपवाळी।। \\
+  विष्णुदास नामा, जीवेभावे ओवाळी।।३।। \\
+  \rule{\linewidth}{1pt} \\
+  असो नासो भाव आम्हा तुज्या थाया\\
+  कृपाद्रिष्टि पाहे, माझा पंढरीराया\\
+  येई हो विठ्ठले माझे माऊली ये॥\\
+  \pagebreak
+  \subsection*{english}
+  yei ho viththale majhe mauli yeah\\ nidhalavari kar, thevuni vat mi pahei\\ alia goliya hati dhadi niropa\\ pandharpuri aahe, mazza maybapa।।1।।\\
+  \rule{\linewidth}{1pt} \\
+  pivala pitambar kaisa gagani jhalakalaa\\ garudavari basoni, mazza kaivari alaa।।2।।\\
+  \rule{\linewidth}{1pt} \\
+  vithobache rajy amha nitya dipavali।।\\ vishnudas nama jivebhave ovali।।3।।
+  \rule{\linewidth}{1pt} \\
+  aso naso bhav amha tujya thaya\\ kripadristi pahe, mazza pandhariraya\\ yei ho viththale majhe mauli ye\\
+\end{flushleft}
+\pagebreak
+\chapter{कापूर आरती(Kapoor Aarti)}
+\begin{flushleft}
+  \subsection*{marathi}
+  कर्पूरगौरं करुणावतारं।\\
+  संसारसारम् भुजगेन्द्रहारम्॥ \\
+  सदावसन्तं हृदयारविन्दे।\\
+  भवं भवानीसहितं नमामि॥\\
+  मंदारमाला कुलतालकायै: कपालमालांकृत शेखरायः \\
+  दिव्याम्बराये च दिगम्बराय, नमः शिवाय च नमः शिवाय॥ \\
+  \pagebreak
+  \subsection*{english}
+  \textenglish{
+    karpūragauraṁ karuṇāvatāraṁ। \\
+    sansārsāram bhujagendrahāram॥ \\
+    sadāvasantaṁ hṛdayāravinde। \\
+    bhavaṁ bhavānīsahitaṁ namāmi॥ \\
+    mandaramala kultalkayai: kapalamalankrit shekharayah \\ divyambaraye ch digambaray, namah shivay ch namah shivaya \\
+  }
+\end{flushleft}
+\pagebreak
+% \part{मंत्र, श्लोक, भजन, व अथर्वशीर्ष }
+\part{मंत्र, श्लोक, व भजन}
+\chapter{मंत्रपुष्पांजली मंत्र (Mantra Pushpanjali )}
+\begin{flushleft}
+  \section*{marathi}
+  ॐ यज्ञेन यज्ञमयजन्त देवास्तानि धर्माणि प्रथमान्यासन् ।\\ ते ह नाकं महिमानः सचन्त यत्र पूर्वे साध्याः सन्ति देवाः ।।1।।\\
+  \rule{\linewidth}{1pt} \\
+  ॐ राजाधिराजाय प्रसह्यसाहिने नमो वयं वैश्रवणाय कुर्महे ।\\ स मे कामान्कामकामाय मह्यम् कामेश्वरो वैश्रवणो ददातु ।\\ कुबेराय वैश्रवणाय महाराजाय नमः ।।2।।\\
+  \rule{\linewidth}{1pt} \\
+  ॐ स्वस्ति। साम्राज्यं भौज्यं स्वाराज्यं वैराज्यं पारमेष्ठ्यं राज्यं माहाराज्यमाधिपत्यमयं समंतपर्यायी स्यात्सार्वभौमः सार्वायुष आंतादापरार्धात्पृथिव्यै समुद्रपर्यंताया एकराळिति ।।3।।\\
+  \rule{\linewidth}{1pt} \\
+  तदप्येषः श्लोको ऽभिगीतो ।मरुतः परिवेष्टारो मरुत्तस्यावसन् गृहे । आविक्षितस्य कामप्रेर्विश्वे देवाः सभासद इति ।।4।।\\
+  \rule{\linewidth}{1pt} \\
+  ॐ एकदंतायविघ्महे वक्रतुण्डाय धीमहि।\\
+  तन्नोदंती प्रचोदयात्।\\
+  \rule{\linewidth}{1pt} \\
+  ॐ तत्पुरुषाय विद्महे महादेवाय धीमहि।
+  तन्नो रुद्रः प्रचोदयात्॥ \\
+  \rule{\linewidth}{1pt} \\
+  मंत्रपुष्पांजली समर्पयामि ।।\\
 
-% \DndDropCapLine{T}{his package is designed to aid you in} writing beautifully typeset documents for the fifth edition of the world's greatest roleplaying game. It starts by adjusting the section formatting from the defaults in \LaTeX{} to something a bit more familiar to the reader. The chapter formatting is displayed above.
+  ।। गणपतिबाप्पा मोरया ।।\\
+  \pagebreak
+  \section*{english}
+  oṃ yajñena yajñamayajanta devāstāni dharmāṇi prathamānyāsan। \\
+  te ha nākam mahimānaḥ sacanta yatra pūrve sādhyāḥ santi devāḥ।।1।।\\
+  om rājādhirājāya prasahyasāhine namovayam vaiśravaṇāya kurmahe।\\
+  sa me kāmānkāmakāmāya mahyam kāmeśvaro vaiśravaṇo dadātu।\\
+  kuberāya vaiśravaṇāya mahārājāya namaḥ।।2।।\\
+  om svasti।\\
+  sāmrājyam bhaujyam svārājyam vairājyam pārameṣṭhyam rājyam
+  māhārājyamādhipatyamayam samantaparyāyī syātsārvabhaumaḥ sārvāyuṣa āntādāparārdhātpṛthivyai samudraparyantāyā ekarāḷiti ।। 3 ।।
+  tadapyeṣa śloko 'bhigīto ।
+  marutaḥ pariveṣṭāro maruttasyāvasan gṛhe ।
+  āvikśitasya kāmaprerviśve devāḥ sabhāsada iti ।। 4 ।।
+  \rule{\linewidth}{1pt} \\
+  oṃ ekadantayavighmahe vakratunday dhimhi\\ tannodanti prachodayat ।।\\
+  % viśvataścakṣur uta viśvatomukho viśvatobāhur uta viśvataspāt । sam bāhubhyāṁ dhamati sam patatrair dyāvābhūmī janayan deva ekaḥ ।। 5 ।।
+  \rule{\linewidth}{1pt} \\
+  oṃ tatpuruṣāya vidmahe mahādevāya dhīmahi।\\
+  tanno rudraḥ pracodayāt।।
+  \pagebreak
+  \chapter{घालीन लोटांगण(Ghalin Lotangan)}
 
-% \section{Section}
-% Sections break up chapters into large groups of associated text.
+  \section*{marathi}
+  घालीन लोटांगण, वंदीन चरण । \\
+  डोळ्यांनी पाहीन रूप तुझे । \\
+  प्रेमे आलिंगिन, आनंदे पूजिन । \\
+  भावें ओवाळीन म्हणे नामा ॥१॥ \\
+  \rule{\linewidth}{1pt} \\
+  त्वमेव माता पिता त्वमेव । \\
+  त्वमेव बंधुश्च सखा त्वमेव । \\
+  त्वमेव विद्या द्रविणं त्वमेव । \\
+  त्वमेव सर्वं मम देवदेव ॥२॥ \\
+  \rule{\linewidth}{1pt} \\
+  कायेन वाचा मनसेंद्रियैर्वा । \\
+  बुध्यात्मना वा प्रकृतिस्वभावात् । \\
+  करोमि यद्यत्सकलं परस्मै । \\
+  नारायणायेति समर्पयामि ॥३॥ \\
+  \rule{\linewidth}{1pt} \\
+  अच्युतं केशवं रामनारायणं । \\
+  कृष्ण दामोदरं वासुदेवं हरिम् । \\
+  श्रीधरं माधवं गोपिकावल्लभं । \\
+  जानकीनायकं रामचंद्र भजे ॥ ४ ॥ \\
+  \rule{\linewidth}{1pt} \\
+  हरे राम हरे राम, राम राम हरे हरे । \\
+  हरे कृष्ण हरे कृष्ण, कृष्ण कृष्ण हरे हरे ॥५॥ \\
+  \pagebreak
+  \section*{english}
+  Ghaalin Lotaangan Vandin \\
+  Ghaalin Lotaangan Vandin Charan. \\
+  Dolyaanni Paahin Roop Tujhe \\
+  Preme Aalingan Aanande Poojin. \\
+  Bhaave Ovaalin Mhane Naama. ॥1॥\\
+  \rule{\linewidth}{1pt} \\
+  Tvamev Mata cha Pita Tvamev \\
+  Tvamev Bandhu cha Sakha Tvamev. \\
+  Tvamev Vidya Dravinam Tvamev \\
+  Tvamev Sarvam Mam Dev dev. ॥2॥\\
+  \rule{\linewidth}{1pt} \\
+  Kaayen Vaacha Manasen-driyairva, \\
+  Budhdaatmana va Prakruti-svabhavaat \\
+  Karomi Yadyat Sakalam Parasmai \\
+  Narayanayeti Samarpayaami. ॥3॥\\
+  \rule{\linewidth}{1pt} \\
+  Achayutam Keshavam Ram-narayanam, \\
+  Krishna-damodaram Vasudevam Hari. \\
+  Shridharam Madhavam Gopika-vallabham, \\
+  Janaki-nayakam Ram-chandram Bhaje ॥4॥ \\
+  \rule{\linewidth}{1pt} \\
+  Hare Ram Hare Ram \\
+  Ram Ram Hare Hare \\
+  Hare Krishna Hare Krishna \\
+  Krishna Krishna Hare Hare. ॥5॥\\
+  \pagebreak
+%   \chapter{Atharva Shirsh}
+%   \section*{marathi}
+%   ॐ भद्रं कर्णेभिः शृणुयाम देवाः ।
+%   भद्रं पश्येमाक्षभिर्यजत्राः ।
+%   स्थिरैरङ्गैस्तुष्टुवाग्‍ँसस्तनूभिः ।
+%   व्यशेम देवहितं यदायूः ।
+%   \rule{\linewidth}{1pt} \\
+%   स्वस्ति न इन्द्रो वृद्धश्रवाः ।
+%   स्वस्ति नः पूषा विश्ववेदाः ।
+%   स्वस्ति नस्तार्क्ष्यो अरिष्टनेमिः ।
+%   स्वस्ति नो बृहस्पतिर्दधातु ॥
+%   ॐ शान्तिः शान्तिः शान्तिः ॥
+%   ॐ नमस्ते गणपतये ॥१॥\\
+%   \rule{\linewidth}{1pt} \\
+%   त्वमेव प्रत्यक्षं तत्त्वमसि । \\
+%   त्वमेव केवलं कर्ताऽसि । \\
+%   त्वमेव केवलं धर्ताऽसि । \\
+%   त्वमेव केवलं हर्ताऽसि । \\
+%   त्वमेव सर्वं खल्विदं ब्रह्मासि । \\
+%   त्वं साक्षादात्माऽसि नित्यम् ॥२॥ \\
+%   \rule{\linewidth}{1pt} \\
+%   ऋतं वच्मि । सत्यं वच्मि ॥३॥
+%   \rule{\linewidth}{1pt} \\
+%   अव त्वं माम् ।
+%   अव वक्तारम् ।
+%   अव श्रोतारम् ।
+%   अव दातारम् ।
+%   अव धातारम् ।
+%   अवानूचानमव शिष्यम् ।
+%   \rule{\linewidth}{1pt} \\
+%   अव पुरस्तात् ।
+%   अव दक्षिणात्तात् ।
+%   अव पश्चात्तात् ।
+%   अवोत्तरात्तात् ।
+%   अव चोर्ध्वात्तात् ।
+%   अवाधरात्तात् ।
+%   सर्वतो मां पाहि पाहि समन्तात् ॥४॥
+%   \rule{\linewidth}{1pt} \\
+%   त्वं वाङ्मयस्त्वं चिन्मयः ।
+%   त्वमानन्दमयस्त्वं ब्रह्ममयः ।
+%   त्वं सच्चिदानन्दाऽद्वितीयोऽसि ।
+%   त्वं प्रत्यक्षं ब्रह्मासि ।
+%   त्वं ज्ञानमयो विज्ञानमयोऽसि ॥५॥
+%   \rule{\linewidth}{1pt} \\
+%   त्वं भूमिरापोऽनलोऽनिलो नभः ।
+%   त्वं चत्वारि वाक् {परिमिता} पदानि ।
+%   \rule{\linewidth}{1pt} \\
+%   त्वं भूमिरापोऽनलोऽनिलो नभः ।
+% त्वं चत्वारि वाक् {परिमिता} पदानि ।
+% \pagebreak
+% \section*{english}
+%   \rule{\linewidth}{1pt} \\
+%   Om Bhadram Karnnebhih Shrnnuyaama Devaah । \\
+%   Bhadram Pashyema-Akssabhir-Yajatraah । \\
+%   Sthirair-Anggais-Tussttuvaamsas-Tanuubhih । \\
+%   Vyashema Devahitam Yad-Aayuh । \\
+%   \rule{\linewidth}{1pt} \\
+%   Om Namas-Te Gannapataye ।।1।।
+%   Svasti Na Indro Vrddha-Shravaah । \\
+%   Svasti Nah Puussaa Vishva-Vedaah । \\
+%   Svasti Nas-Taarkssyo Arisstta-Nemih । \\
+%   Svasti No Brhaspatir-Dadhaatu ।। \\
+%   Om Shaantih Shaantih Shaantih ।। \\
+%   \rule{\linewidth}{1pt} \\
+%   Om Namas-Te Gannapataye ।।1।।
+%   \rule{\linewidth}{1pt} \\
+%   Tvam-Eva Pratyakssam Tattvam-Asi ।
+%   Tvam-Eva Kevalam Kartaa-[A]si ।
+%   Tvam-Eva Kevalam Dhartaa-[A]si ।
+%   Tvam-Eva Kevalam Hartaa-[A]si ।
+%   Tvam-Eva Sarvam Khalv[u]-Idam Brahma-Asi ।
+%   Tvam Saakssaad-Aatmaa-[A]si Nityam ।।2।।
+%   \rule{\linewidth}{1pt} \\
+%   Svasti Na Indro Vrddha-Shravaah ।
+%   Svasti Nah Puussaa Vishva-Vedaah ।
+%   Svasti Nas-Taarkssyo Arisstta-Nemih ।
+%   Svasti No Brhaspatir-Dadhaatu ।।
+%   Om Shaantih Shaantih Shaantih ।।
+%   \rule{\linewidth}{1pt} \\
+%   Rtam Vacmi | Satyam Vacmi ||3||
+%   Ava Tvam Maam |
+%   Ava Vaktaaram |
+%   Ava Shrotaaram |
+%   Ava Daataaram |
+%   Ava Dhaataaram |
+%   Ava-Anuucaanam-Ava Shissyam |
+%   \rule{\linewidth}{1pt} \\
+%   Ava Purastaat |
+%   Ava Dakssinnaattaat |
+%   Ava Pashcaattaat |
+%   Avo[a-U]ttaraattaat |
+%   Ava Co[a-U]rdhvaattaat |
+%   Ava-Adharaattaat |
+%   Sarvato Maam Paahi Paahi Samantaat ||4||
+%   \rule{\linewidth}{1pt} \\
+%   Tvam Vaangmayas-Tvam Cinmayah |
+%   Tvam-Aanandamayas-Tvam Brahmamayah |
+%   Tvam Saccidaanandaa-[A]dvitiiyo-[A]si |
+%   Tvam Pratyakssam Brahma-Asi |
+%   Tvam Jnyaanamayo Vijnyaanamayo-[A]si ||5||
+%   \rule{\linewidth}{1pt} \\
+%   Tvam Vaangmayas-Tvam Cinmayah |
+%   Tvam-Aanandamayas-Tvam Brahmamayah |
+%   Tvam Saccidaanandaa-[A]dvitiiyo-[A]si |
+%   Tvam Pratyakssam Brahma-Asi |
+%   Tvam Jnyaanamayo Vijnyaanamayo-[A]si ||5||
+%   \rule{\linewidth}{1pt} \\
+%   Tvam Bhuumir-Aapo-[A]nalo-[A]nilo Nabhah |
+%   Tvam Catvaari Vaak {Parimitaa} Padaani |
+%   \rule{\linewidth}{1pt} \\
 
-% \subsection{Subsection}
-% Subsections further break down the information for the reader.
-
-% \subsubsection{Subsubsection}
-% Subsubsections are the furthest division of text that still have a block header. Below this level, headers are displayed inline.
-
-% \paragraph{Paragraph}
-% The paragraph format is seldom used in the core books, but is available if you prefer it to the ``normal'' style.
-
-% \subparagraph{Subparagraph}
-% The subparagraph format with the paragraph indent is likely going to be more familiar to the reader.
-
-% \section{Special Sections}
-% The module also includes functions to aid in the proper typesetting of multi-line section headers: ।\DndFeatHeader। for feats, ।\DndItemHeader। magic items and traps, and ।\DndSpellHeader। for spells.
-
-% \DndFeatHeader{Typesetting Savant}[Prerequisite: \LaTeX{} distribution]
-% You have acquired a package which aids in typesetting source material for one of your favorite games, giving you the following benefits:
-
-% \begin{itemize}
-%   \item You have advantage on Intelligence checks to typeset new content.
-%   \item When you fail an Intelligence check to typeset new content, you can ask questions online at the package's website.
-% \end{itemize}
-
-% \DndItemHeader{Foo's Quill}{Wondrous item, rare}
-% This quill has 3 charges. While holding it, you can use an action to expend 1 of its charges. The quill leaps from your hand and writes a contract applicable to your situation.
-
-% The quill regains 1d3 expended charges daily at dawn.
-
-% \DndSpellHeader%
-%   {Beautiful Typesetting}
-%   {4th-level illusion}
-%   {1 action}
-%   {5 feet}
-%   {S, M (ink and parchment, which the spell consumes)}
-%   {Until dispelled}
-% You are able to transform a written message of any length into a beautiful scroll. All creatures within range that can see the scroll must make a wisdom saving throw or be charmed by you until the spell ends.
-
-% While the creature is charmed by you, they cannot take their eyes off the scroll and cannot willingly move away from the scroll. Also, the targets can make a wisdom saving throw at the end of each of their turns. On a success, they are no longer charmed.
-
-% \section{Map Regions}
-% The map region functions ।\DndArea। and ।\DndSubArea। provide automatic numbering of areas.
-
-% \DndArea{Village of Hommlet}
-% This is the village of hommlet.
-
-% \DndSubArea{Inn of the Welcome Wench}
-% Inside the village is the inn of the Welcome Wench.
-
-% \DndSubArea{Blacksmith's Forge}
-% There's a blacksmith in town, too.
-
-% \DndArea{Foo's Castle}
-% This is foo's home, a hovel of mud and sticks.
-
-% \DndSubArea{Moat}
-% This ditch has a board spanning it.
-
-% \DndSubArea{Entrance}
-% A five-foot hole reveals the dirt floor illuminated by a hole in the roof.
-
-% \chapter{Text Boxes}
-
-% The module has three environments for setting text apart so that it is drawn to the reader's attention. ।DndReadAloud। is used for text that a game master would read aloud.
-
-% \begin{DndReadAloud}
-%   As you approach this module you get a sense that the blood and tears of many generations went into its making. A warm feeling welcomes you as you type your first words.
-% \end{DndReadAloud}
-
-% \section{As an Aside}
-% The other two environments are the ।DndComment। and the ।DndSidebar।. The ।DndComment। is breakable and can safely be used inline in the text.
-
-% \begin{DndComment}{This Is a Comment Box!}
-%   A ।DndComment। is a box for minimal highlighting of text. It lacks the ornamentation of ।DndSidebar।, but it can handle being broken over a column.
-% \end{DndComment}
-
-% The ।DndSidebar। is not breakable and is best used floated toward a page corner as it is below.
-
-% \begin{DndSidebar}[float=!b]{Behold the DndSidebar!}
-%   The ।DndSidebar। is used as a sidebar. It does not break over columns and is best used with a figure environment to float it to one corner of the page where the surrounding text can then flow around it.
-% \end{DndSidebar}
-
-% \section{Tables}
-% The ।DndTable। colors the even rows and is set to the width of a line by default.
-
-% \begin{DndTable}[header=Nice Table]{XX}
-%     Table head  & Table head \\
-%     Some value  & Some value \\
-%     Some value  & Some value \\
-%     Some value  & Some value
-% \end{DndTable}
-
-% \chapter{Monsters and NPCs}
-
-% % Monster stat block
-% \begin{DndMonster}[float*=b,width=\textwidth + 8pt]{Monster Foo}
-%   \begin{multicols}{2}
-%     \DndMonsterType{Medium aberration (metasyntactic variable), neutral evil}
-
-%     % If you want to use commas in the key values, enclose the values in braces.
-%     \DndMonsterBasics[
-%         armor-class = {9 (12 with \emph{mage armor})},
-%         hit-points  = {\DndDice{3d8 + 3}},
-%         speed       = {30 ft., fly 30 ft.},
-%       ]
-
-%     \DndMonsterAbilityScores[
-%         str = 12,
-%         dex = 8,
-%         con = 13,
-%         int = 10,
-%         wis = 14,
-%         cha = 15,
-%       ]
-
-%     \DndMonsterDetails[
-%         %saving-throws = {Str +0, Dex +0, Con +0, Int +0, Wis +0, Cha +0},
-%         %skills = {Acrobatics +0, Animal Handling +0, Arcana +0, Athletics +0, Deception +0, History +0, Insight +0, Intimidation +0, Investigation +0, Medicine +0, Nature +0, Perception +0, Performance +0, Persuasion +0, Religion +0, Sleight of Hand +0, Stealth +0, Survival +0},
-%         %damage-vulnerabilities = {cold},
-%         %damage-resistances = {bludgeoning, piercing, and slashing from nonmagical attacks},
-%         %damage-immunities = {poison},
-%         %condition-immunities = {poisoned},
-%         senses = {darkvision 60 ft., passive Perception 10},
-%         languages = {Common, Goblin, Undercommon},
-%         challenge = 1,
-%       ]
-%     % Traits
-%     \DndMonsterAction{Innate Spellcasting}
-%     Foo's spellcasting ability is Charisma (spell save DC 12, +4 to hit with spell attacks). It can innately cast the following spells, requiring no material components:
-%     \begin{DndMonsterSpells}
-%       \DndInnateSpellLevel{misty step}
-%       \DndInnateSpellLevel[3]{fog cloud, rope trick}
-%       \DndInnateSpellLevel[1]{identify}
-%     \end{DndMonsterSpells}
-
-%     \DndMonsterAction{Spellcasting}
-%     Foo is a 2nd-level spellcaster. Its spellcasting ability is Charisma (spell save DC 12, +4 to hit with spell attacks). It has the following sorcerer spells prepared:
-%     \begin{DndMonsterSpells}
-%       \DndMonsterSpellLevel{blade ward, fire bolt, light, shocking grasp}
-%       \DndMonsterSpellLevel[1][3]{burning hands, mage armor, shield}
-%     \end{DndMonsterSpells}
-
-%     \DndMonsterSection{Actions}
-%     \DndMonsterAction{Multiattack}
-%     The foo makes two melee attacks.
-
-%     %Default values are shown commented out
-%     \DndMonsterAttack[
-%       name=Dagger,
-%       %distance=both, % valid options are in the set {both,melee,ranged},
-%       %type=weapon, %valid options are in the set {weapon,spell}
-%       mod=+3,
-%       %reach=5,
-%       %range=20/60,
-%       %targets=one target,
-%       dmg=\DndDice{1d4+1},
-%       dmg-type=piercing,
-%       %plus-dmg=,
-%       %plus-dmg-type=,
-%       %or-dmg=,
-%       %or-dmg-when=,
-%       %extra=,
-%     ]
-
-%     %\DndMonsterMelee calls \DndMonsterAttack with the melee option
-%     \DndMonsterMelee[
-%       name=Flame Tongue Longsword,
-%       mod=+3,
-%       %reach=5,
-%       %targets=one target,
-%       dmg=\DndDice{1d8+1},
-%       dmg-type=slashing,
-%       plus-dmg=\DndDice{2d6},
-%       plus-dmg-type=fire,
-%       or-dmg=\DndDice{1d10+1},
-%       or-dmg-when=if used with two hands,
-%       %extra=,
-%     ]
-
-%     %\DndMonsterRanged calls \DndMonsterAttack with the ranged option
-%     \DndMonsterRanged[
-%       name=Assassin's Light Crossbow,
-%       mod=+1,
-%       range=80/320,
-%       dmg=\DndDice{1d8},
-%       dmg-type=piercing,
-%       %plus-dmg=,
-%       %plus-dmg-type=,
-%       %or-dmg=,
-%       %or-dmg-when=,
-%       extra={, and the target must make a DC 15 Constitution saving throw, taking 24 (7d6) poison damage on a failed save, or half as much damage on a successful one}
-%     ]
-
-%     % Legendary Actions
-%     \DndMonsterSection{Legendary Actions}
-%     The foo can take 3 legendary actions, choosing from the options below. Only one legendary action option can be used at a time and only at the end of another creature's turn. The foo regains spent legendary actions at the start of its turn.
-
-%     \begin{DndMonsterLegendaryActions}
-%       \DndMonsterLegendaryAction{Move}{The foo moves up to its speed.}
-%       \DndMonsterLegendaryAction{Dagger Attack}{The foo makes a dagger attack.}
-%       \DndMonsterLegendaryAction{Create Contract (Costs 3 Actions)}{The foo presents a contract in a language it knows and waves it in the face of a creature within 10 feet. The creature must make a DC 10 Intelligence saving throw. On a failure, the creature is incapacitated until the start of the foo's next turn. A creature who cannot read the language in which the contract is written has advantage on this saving throw.}
-%     \end{DndMonsterLegendaryActions}
-%   \end{multicols}
-% \end{DndMonster}
-
-% The ।DndMonster। environment is used to typeset monster and NPC stat blocks. The module supplies many functions to easily typeset the contents of the stat block
-
-% \part{Customization}
-
-% \chapter{Colors}
-
-% \begin{table*}[b]
-%   \caption{\DndFontTableTitle{}Colors Supported by this Package}\label{tab:colors}
-
-%   \begin{tabularx}{\linewidth}{lX}
-%     \textbf{Color}                  & \textbf{Description} \\
-%     \rowcolor{PhbLightGreen}
-%     ।PhbLightGreen।                 & Light green used in PHB Part 1 (Default) \\
-%     \rowcolor{PhbLightCyan}
-%     ।PhbLightCyan।                  & Light cyan used in PHB Part 2 \\
-%     \rowcolor{PhbMauve}
-%     ।PhbMauve।                      & Pale purple used in PHB Part 3 \\
-%     \rowcolor{PhbTan}
-%     ।PhbTan।                        & Light brown used in PHB appendix \\
-%     \rowcolor{DmgLavender}
-%     ।DmgLavender।                   & Pale purple used in DMG Part 1 \\
-%     \rowcolor{DmgCoral}
-%     ।DmgCoral।                      & Orange-pink used in DMG Part 2 \\
-%     \rowcolor{DmgSlateGray}
-%     ।DmgSlateGray। (।DmgSlateGrey।) & Blue-gray used in PHB Part 3 \\
-%     \rowcolor{DmgLilac}
-%     ।DmgLilac।                      & Purple-gray used in DMG appendix \\
-%     \rowcolor{BrGreen}
-%     ।BrGreen।                       & Gray-green used for tables in Basic Rules\\
-%   \end{tabularx}
-% \end{table*}
-
-% This package provides several global color variables to style ।DndComment।, ।DndReadAloud।, ।DndSidebar।, and ।DndTable। environments.
-
-% \begin{DndTable}[header=Box Colors]{lX}
-%   Color            &  Description \\
-%   ।commentcolor।   & ।DndComment। background \\
-%   ।readaloudcolor। & ।DndReadAloud। background \\
-%   ।sidebarcolor।   & ।DndSidebar। background \\
-%   ।tablecolor।     & background of even ।DndTable। rows \\
-% \end{DndTable}
-
-% They also accept an optional color argument to set the color for a single instance. See Table~\ref{tab:colors} for a list of core book accent colors.
-
-% \begin{lstlisting}
-% \begin{DndTable}[color=PhbLightCyan]{cX}
-%   d8 & Item \\
-%   1  & Small wooden button \\
-%   2  & Red feather \\
-%   3  & Human tooth \\
-%   4  & Vial of green liquid \\
-%   5  & Loaded dice \\
-%   6  & Tasty biscuit \\
-%   7  & Broken axe handle \\
-%   8  & Tarnished silver locket \\
-% \end{DndTable}
-% \end{lstlisting}
-
-% \begin{DndTable}[color=PhbLightCyan]{cX}
-%   d8 & Item \\
-%   1  & Small wooden button \\
-%   2  & Red feather \\
-%   3  & Human tooth \\
-%   4  & Vial of green liquid \\
-%   5  & Loaded dice \\
-%   6  & Tasty biscuit \\
-%   7  & Broken axe handle \\
-%   8  & Tarnished silver locket \\
-% \end{DndTable}
-
-% \section{Themed Colors}
-% Use ।\DndSetThemeColor[<color>]। to set ।commentcolor।, ।readaloudcolor।, ।sidebarcolor।, and ।tablecolor। to a specific color. Calling ।\DndSetThemeColor। without an argument sets those colors to the current ।themecolor।. In the following example the group limits the change to just a few boxes; after the group finishes, the colors are reverted to what they were before the group started.
-
-% \begin{lstlisting}
-% \begingroup
-% \DndSetThemeColor[PhbMauve]
-
-% \begin{DndComment}{This Comment Is in Mauve}
-%   This comment is in the the new color.
-% \end{DndComment}
-
-% \begin{DndSidebar}{This Sidebar Is Also Mauve}
-%   The sidebar is also using the new theme color.
-% \end{DndSidebar}
-% \endgroup
-% \end{lstlisting}
-
-% \begingroup
-% \DndSetThemeColor[PhbMauve]
-
-% \begin{DndComment}{This Comment Is in Mauve}
-%   This comment is in the the new color.
-% \end{DndComment}
-
-% \begin{DndSidebar}{This Sidebar Is Also Mauve}
-%   The sidebar is also using the new theme color.
-% \end{DndSidebar}
-% \endgroup
-
+\end{flushleft}
 \end{document}
