--- a/lib/dndsections.sty
+++ b/lib/dndsections.sty
@@ -20,7 +20,7 @@
   \titleformat {\part}
     [display]
     { \centering \DndFontPart } % format
-    { \DndContour{\partname\ \thepart} } % label
+    { } % label
     { 2ex } % sep
     { \DndContour } % before-code
 
