--- a/lib/dndtoc.sty
+++ b/lib/dndtoc.sty
@@ -10,7 +10,7 @@
   \titlecontents{part}
     [0pt] % left
     { \addvspace{.06in} \DndFontTocPart } % above-code
-    {\partname\ \thecontentslabel :~ } % numbered-entry-format
+    { \thecontentslabel :~ } % numbered-entry-format
     {} % numberless-entry-format
     {} % filler-page-format
     [ \addvspace{-.03in} \titleline{ \color{titlegold} \titlerule[1pt] } \addvspace{.05in } ] % below-code
@@ -18,7 +18,7 @@
   \titlecontents{chapter}
     [0pt] % left
     { \addvspace{.1in} \DndFontTocChapter } % above-code
-    {\tocchapterabbreviationname\ \thecontentslabel :~ } % numbered-entry-format
+    { \thecontentslabel :~ } % numbered-entry-format
     {} % numberless-entry-format
     {\titlerule*{.}\contentspage} % filler-page-format
 
